--- a/manifest.json
+++ b/manifest.json
@@ -16,10 +16,16 @@
     "permissions": [
         "storage"
     ],
+    "host_permissions": [
+        "https://emojipedia.org/*"
+    ],
     "icons": {
           "16": "icons/icon16.png",
           "32": "icons/icon32.png",
           "48": "icons/icon48.png",
           "128": "icons/icon128.png"
+    },
+    "background": {
+        "service_worker": "background.js"
     }
 }
