--- a/source/manifest.json
+++ b/source/manifest.json
@@ -5,26 +5,32 @@
     "manifest_version": 3,
     "action": {
         "default_popup": "extension.html",
-        "default_icon": "sob.png"
+        "default_icon": {
+            "16": "icons/icon16.png",
+            "32": "icons/icon32.png",
+            "48": "icons/icon48.png",
+            "128": "icons/icon128.png"
+        }
     },
     "content_scripts": [
         {
-        "matches": ["https://www.google.com/search*"],
-        "js": ["content.js"],
-        "run_at": "document_start"
+            "matches": ["https://www.google.com/search*"],
+            "js": ["content.js"],
+            "run_at": "document_idle"
         }
     ],
     "permissions": [
-        "storage"
+        "storage",
+        "activeTab"
     ],
     "host_permissions": [
         "https://emojipedia.org/*"
     ],
     "icons": {
-          "16": "icons/icon16.png",
-          "32": "icons/icon32.png",
-          "48": "icons/icon48.png",
-          "128": "icons/icon128.png"
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
     },
     "background": {
         "service_worker": "background.js"
