--- a/source/manifest.json
+++ b/source/manifest.json
@@ -20,8 +20,7 @@
         }
     ],
     "permissions": [
-        "storage",
-        "activeTab"
+        "storage"
     ],
     "host_permissions": [
         "https://emojipedia.org/*"
